# web-integration-example

./: .gitignore  README.md
app/: README.md  package-lock.json  package.json  tsconfig.json
app/pages/: index.tsx
app/pages/api/: fix-grid.ts  solve.ts
app/styles/: Home.module.css  global.css
specification/: README.md  pyproject.toml
specifications/: pyproject.toml
specifications/notebooks/: sudoku.ipynb
